Fix vertical alignment

--- a/_sass/cyclist-jekyll.scss
+++ b/_sass/cyclist-jekyll.scss
@@ -20,7 +20,7 @@ ul#social li a {
 
 ul#social li a svg {
   margin: auto;
-  vertical-align: -4px;
+  vertical-align: -3px;
   width: 16px;
   height: 16px;
   margin-right: 4px;
